# dungeon-master

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
docs/adr/: 001-protocol-based-providers.md  002-no-langchain.md  003-jsonb-character-storage.md  004-swappable-rules-engine.md  005-roll-tag-action-protocol.md  006-two-phase-llm-flow.md  007-websocket-game-loop.md  008-vanilla-frontend.md  009-content-type-rag-filtering.md  010-book-to-adventure-pipeline.md  011-srd-compliance-scope.md
docs/prd/: 01-product-overview.md  02-bookworm-rag-system.md  03-game-engine.md  04-ai-dungeon-master.md  05-web-interface.md  06-content-pipeline.md
docs/reference/: api-reference.md  configuration.md  data-models.md  rules-engine-guide.md
src/bookworm/: config.py  main.py  models.py  utils.py
src/bookworm/db/: connection.py  migrations.py  repository.py
src/bookworm/embeddings/: base.py  local.py
src/bookworm/ingestion/: chunker.py  pipeline.py  reader.py
src/bookworm/llm/: base.py  ollama.py
src/bookworm/retrieval/: pipeline.py  search.py
src/dungeonmaster/: config.py  logging_config.py  models.py
src/dungeonmaster/ai/: actions.py  context.py  dm.py  prompts.py
src/dungeonmaster/content/: converter.py  ingest.py
tests/: conftest.py  test_actions.py  test_chunker.py  test_dice.py  test_dnd5e_abilities.py  test_dnd5e_characters.py  test_dnd5e_combat.py  test_dnd5e_engine.py  test_embeddings.py  test_markdown_reader.py  test_pipeline.py  test_reader.py  test_search.py  test_srd_mechanics.py
(+25 files in other folders)
