[project]
name = "bookworm"
version = "0.1.0"
description = "A local-first RAG application for asking questions about books"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic-settings>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "numpy>=1.26.0",
]

[project.scripts]
bookworm = "bookworm.main:app"
dungeonmaster = "dungeonmaster.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookworm", "src/dungeonmaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
